--- a/phase-2/Session-1/SecondDemo/src/main/webapp/index.html
+++ b/phase-2/Session-1/SecondDemo/src/main/webapp/index.html
@@ -6,7 +6,17 @@
 </head>
 <body>
 
-<a href="submit">Click here</a>
+<form action="login" method="post">
+
+<input type="text" name="uname" placeholder="Enter Username">
+<br><br>
+<input type="password" name="pass" placeholder="Enter Password">
+<br><br>
+<input type="submit" value="login"/> 
+
+
+</form>
+
 
 </body>
 </html>
