Session 6 notes hibernate

--- a/phase-2/session-6/HibernateProject/src/main/webapp/index.html
+++ b/phase-2/session-6/HibernateProject/src/main/webapp/index.html
@@ -8,5 +8,9 @@
 
 <a href="init">Initialize Hibernate</a>
 
+<a href="save">Save Student Data</a>
+
+<a href="fetch">Fetch Student Data</a>
+
 </body>
 </html>
