--- a/phase-2/Session-7/CollectionMapping/src/main/webapp/index.html
+++ b/phase-2/Session-7/CollectionMapping/src/main/webapp/index.html
@@ -5,6 +5,6 @@
 <title>Insert title here</title>
 </head>
 <body>
-<a href="fetch">ProductDetails</a>
+<a href="list">ProductDetails</a>
 </body>
 </html>
