Session one notes

--- a/Phase-4/Session-1/grid.html
+++ b/Phase-4/Session-1/grid.html
@@ -10,6 +10,8 @@
 </head>
 <body>
 
+ 
+    <Center><h1>Grid System Demo</h1></Center>
     <div class="container">
         <div class="row">
             <div class="col-md-3 col-sm-6 col-xs-12" style="background-color: chocolate;">
@@ -32,6 +34,7 @@
 
         </div>
     </div>
+ 
     
 
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
