--- a/Phase-4/Session-1/image.html
+++ b/Phase-4/Session-1/image.html
@@ -5,43 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+
 </head>
 <body>
 
- 
-    <Center><h1>Grid System Demo</h1></Center>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-3 col-sm-6 col-xs-12" style="background-color: chocolate;">
-            <h1>This is my DIV-1</h1>
-            </div>
-
-        </div>
-
-        <div class="row">
-            <div class="col-md-3 col-sm-4 col-xs-12" style="background-color: darkseagreen;">
-            <h1>This is my DIV-2</h1>
-            </div>
-
-        </div>
-
-        <div class="row">
-            <div class="col-md-4 col-sm-6 col-xs-12" style="background-color:blueviolet;">
-            <h1>This is my DIV-3</h1>
-            </div>
-
+    <h1> Image Demo </h1>
+    <div class="media-object">
+        <div class="media-object-section">
+            <img src="image/nature.jpg" style="width: 400px;">
         </div>
     </div>
 
-    <h1 class="h1">Heading 1</h1>
-    <h2>Heading 2</h2>
-    <h3>Heading 3</h3>
-    <h4 class="h4">Heading 4</h4>
-    <h5 class="h5">Heading 5</h5>
-    <h6 class="h6">Heading 6</h6>
- 
+    <div class="media-object-section">
+        <h4>Comments Headings</h4>
+        <p>Some Comments Here.....</p>
+    </div>
     
 
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
