--- a/Phase-4/Session-2/progressbar.html
+++ b/Phase-4/Session-2/progressbar.html
@@ -29,8 +29,22 @@
                 Data Downloading 80%
             </div>
         </div>
+
+        <div class="spinner-border text-primary">
+            <span class="sr-only">Loading....</span>
+        </div>
+
+        <div class="spinner-border text-warning">
+            <span class="sr-only">Loading....</span>
+        </div>
+
+        <div class="spinner-border text-success">
+            <span class="sr-only">Loading....</span>
+        </div>
         
     </div>
+
+
      
 </body> 
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
