session 3 javascript notes

--- a/Phase-4/Session-2/formvalidation.html
+++ b/Phase-4/Session-2/formvalidation.html
@@ -140,7 +140,7 @@
 
     <!--JavaScript for custom validations-->
     <script>
-        //iife function
+        //iife function ()();
         (function()
         {
         'use strict';
