session 3 javascript notes

--- a/Phase-4/Session-3/asynCallBack.html
+++ b/Phase-4/Session-3/asynCallBack.html
@@ -12,6 +12,7 @@
         function fetch(callback){
             setTimeout(function(){
                 console.log("Data Fetched Afte 5 Seconds");
+                 callback();
             },5000);
 
         }
