--- a/Phase-5/Session-4/Session-4_JAVA_FSD_Phase-5/test-output/old/Default suite/methods-alphabetical.html
+++ b/Phase-5/Session-4/Session-4_JAVA_FSD_Phase-5/test-output/old/Default suite/methods-alphabetical.html
@@ -1,22 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d4bf7e">  <td>22/05/18 19:57:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AutomaticAnnotationDemo.Hello()[pri:0, instance:com.simplilearn.demo.AutomaticAnnotationDemo@6d763516]">Hello</td> 
-  <td>main@1671179293</td>   <td></td> </tr>
-<tr bgcolor="d4bf7e">  <td>22/05/18 19:57:03</td>   <td>44</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AutomaticAnnotationDemo.afterClass()[pri:0, instance:com.simplilearn.demo.AutomaticAnnotationDemo@6d763516]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1671179293</td>   <td></td> </tr>
-<tr bgcolor="d4bf7e">  <td>22/05/18 19:57:03</td>   <td>42</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AutomaticAnnotationDemo.afterMethod()[pri:0, instance:com.simplilearn.demo.AutomaticAnnotationDemo@6d763516]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1671179293</td>   <td></td> </tr>
-<tr bgcolor="d4bf7e">  <td>22/05/18 19:57:03</td>   <td>154</td> <td title="&lt;&lt;AutomaticAnnotationDemo.afterSuite()[pri:0, instance:com.simplilearn.demo.AutomaticAnnotationDemo@6d763516]">&lt;&lt;afterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1671179293</td>   <td></td> </tr>
-<tr bgcolor="d4bf7e">  <td>22/05/18 19:57:03</td>   <td>47</td> <td>&nbsp;</td><td title="&lt;&lt;AutomaticAnnotationDemo.afterTest()[pri:0, instance:com.simplilearn.demo.AutomaticAnnotationDemo@6d763516]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1671179293</td>   <td></td> </tr>
-<tr bgcolor="d4bf7e">  <td>22/05/18 19:57:03</td>   <td>-83</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AutomaticAnnotationDemo.beforeClass()[pri:0, instance:com.simplilearn.demo.AutomaticAnnotationDemo@6d763516]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1671179293</td>   <td></td> </tr>
-<tr bgcolor="d4bf7e">  <td>22/05/18 19:57:03</td>   <td>-11</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AutomaticAnnotationDemo.beforeMethod()[pri:0, instance:com.simplilearn.demo.AutomaticAnnotationDemo@6d763516]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1671179293</td>   <td></td> </tr>
-<tr bgcolor="d4bf7e">  <td>22/05/18 19:57:03</td>   <td>-157</td> <td title="&gt;&gt;AutomaticAnnotationDemo.beforeSuite()[pri:0, instance:com.simplilearn.demo.AutomaticAnnotationDemo@6d763516]">&gt;&gt;beforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1671179293</td>   <td></td> </tr>
-<tr bgcolor="d4bf7e">  <td>22/05/18 19:57:03</td>   <td>-141</td> <td>&nbsp;</td><td title="&gt;&gt;AutomaticAnnotationDemo.beforeTest()[pri:0, instance:com.simplilearn.demo.AutomaticAnnotationDemo@6d763516]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1671179293</td>   <td></td> </tr>
+<tr bgcolor="d4bf7e">  <td>22/05/18 20:24:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupTest.launchChrome()[pri:0, instance:com.simplilearn.demo.GroupTest@dbf57b3]">launchChrome</td> 
+  <td>main@1613095350</td>   <td></td> </tr>
+<tr bgcolor="d4bf7e">  <td>22/05/18 20:24:37</td>   <td>8759</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupTest.launchFirefox()[pri:0, instance:com.simplilearn.demo.GroupTest@dbf57b3]">launchFirefox</td> 
+  <td>main@1613095350</td>   <td></td> </tr>
+<tr bgcolor="d4bf7e">  <td>22/05/18 20:24:37</td>   <td>8854</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupTest.loginwithChrome()[pri:0, instance:com.simplilearn.demo.GroupTest@dbf57b3]">loginwithChrome</td> 
+  <td>main@1613095350</td>   <td></td> </tr>
+<tr bgcolor="d4bf7e">  <td>22/05/18 20:24:38</td>   <td>9506</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupTest.loginwithFirefox()[pri:0, instance:com.simplilearn.demo.GroupTest@dbf57b3]">loginwithFirefox</td> 
+  <td></td>   <td></td> </tr>
 </table>
