--- a/Phase-5/Session-4/Session-4_JAVA_FSD_Phase-5/test-output/old/Default suite/classes.html
+++ b/Phase-5/Session-4/Session-4_JAVA_FSD_Phase-5/test-output/old/Default suite/classes.html
@@ -4,41 +4,41 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.simplilearn.demo.AutomaticAnnotationDemo</td>
+<td>com.simplilearn.demo.GroupTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>Hello</td>
-<td>&nbsp;</td></tr>
+<td>launchFirefox</td>
+<td>firefox </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>loginwithChrome</td>
+<td>Chrome </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>loginwithFirefox</td>
+<td>firefox </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>launchChrome</td>
+<td>Chrome </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
-<td>&nbsp;</td>
-<td>beforeClass</td>
-<td>&nbsp;</td></tr>
-<tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>beforeMethod</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
 <tr>
-<td>&nbsp;</td>
-<td>afterMethod</td>
-<td>&nbsp;</td></tr>
-<tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>afterClass</td>
-<td>&nbsp;</td></tr>
 </table>
