--- a/Phase-5/Session-4/Session-4_JAVA_FSD_Phase-5/test-output/old/Default suite/groups.html
+++ b/Phase-5/Session-4/Session-4_JAVA_FSD_Phase-5/test-output/old/Default suite/groups.html
@@ -1,4 +1,1 @@
-<h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Chrome</td><td>GroupTest.loginwithChrome()[pri:0, instance:com.simplilearn.demo.GroupTest@dbf57b3]<br/>GroupTest.launchChrome()[pri:0, instance:com.simplilearn.demo.GroupTest@dbf57b3]<br/></td></tr>
-<tr><td>firefox</td><td>GroupTest.launchFirefox()[pri:0, instance:com.simplilearn.demo.GroupTest@dbf57b3]<br/>GroupTest.loginwithFirefox()[pri:0, instance:com.simplilearn.demo.GroupTest@dbf57b3]<br/></td></tr>
-</table>
+<h2>Groups used for this test run</h2>
