--- a/Phase-5/Session-4/Session-4_JAVA_FSD_Phase-5/test-output/old/Default suite/methods.html
+++ b/Phase-5/Session-4/Session-4_JAVA_FSD_Phase-5/test-output/old/Default suite/methods.html
@@ -1,12 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d4bf7e">  <td>22/05/18 20:24:38</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupTest.loginwithFirefox()[pri:0, instance:com.simplilearn.demo.GroupTest@dbf57b3]">loginwithFirefox</td> 
-  <td></td>   <td></td> </tr>
-<tr bgcolor="d4bf7e">  <td>22/05/18 20:24:28</td>   <td>-9506</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupTest.launchChrome()[pri:0, instance:com.simplilearn.demo.GroupTest@dbf57b3]">launchChrome</td> 
-  <td>main@1613095350</td>   <td></td> </tr>
-<tr bgcolor="d4bf7e">  <td>22/05/18 20:24:37</td>   <td>-652</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupTest.loginwithChrome()[pri:0, instance:com.simplilearn.demo.GroupTest@dbf57b3]">loginwithChrome</td> 
-  <td>main@1613095350</td>   <td></td> </tr>
-<tr bgcolor="d4bf7e">  <td>22/05/18 20:24:37</td>   <td>-747</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupTest.launchFirefox()[pri:0, instance:com.simplilearn.demo.GroupTest@dbf57b3]">launchFirefox</td> 
-  <td>main@1613095350</td>   <td></td> </tr>
+<tr bgcolor="d3bc82">  <td>22/05/18 21:10:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AsserionDemo.beforeMethod()[pri:0, instance:com.simplilearn.demo.AsserionDemo@1a451d4d]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1430439149</td>   <td></td> </tr>
+<tr bgcolor="d3bc82">  <td>22/05/18 21:10:13</td>   <td>-2112</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AsserionDemo.login()[pri:0, instance:com.simplilearn.demo.AsserionDemo@1a451d4d]">login</td> 
+  <td>main@1430439149</td>   <td></td> </tr>
+<tr bgcolor="d3bc82">  <td>22/05/18 21:10:19</td>   <td>3792</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AsserionDemo.afterMethod()[pri:0, instance:com.simplilearn.demo.AsserionDemo@1a451d4d]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1430439149</td>   <td></td> </tr>
+<tr bgcolor="d3bc82">  <td>22/05/18 21:10:17</td>   <td>1953</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AsserionDemo.titleTest()[pri:0, instance:com.simplilearn.demo.AsserionDemo@1a451d4d]">titleTest</td> 
+  <td>main@1430439149</td>   <td></td> </tr>
+<tr bgcolor="d3bc82">  <td>22/05/18 21:10:19</td>   <td>3792</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AsserionDemo.afterMethod()[pri:0, instance:com.simplilearn.demo.AsserionDemo@1a451d4d]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1430439149</td>   <td></td> </tr>
+<tr bgcolor="d3bc82">  <td>22/05/18 21:10:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AsserionDemo.beforeMethod()[pri:0, instance:com.simplilearn.demo.AsserionDemo@1a451d4d]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1430439149</td>   <td></td> </tr>
 </table>
